Added set time out to call msg pagination

--- a/chat/templates/chat/room.html
+++ b/chat/templates/chat/room.html
@@ -520,6 +520,9 @@
                 paginate()
             }
         })
+        setTimeout(() => {
+            paginate()
+        }, 1500);
         // --------------------END PAGINATOR---------------------
     });
 </script>
