--- a/chat/templates/chat/room.html
+++ b/chat/templates/chat/room.html
@@ -49,7 +49,7 @@
         </li>
         {% endfor %}
 </ol>
-<i class="fas fa-angle-double-down" id="scrollBottom"></i>
+<i class="fas fa-hand-point-down" id="scrollBottom"></i>
 <div class="typezone">
     <form action="{% url 'chat:room' room.id %}" method="POST" id="sendMessageForm">
         {% csrf_token %}
@@ -246,9 +246,7 @@
 <script>
     // Scroll to bottom
     document.addEventListener('DOMContentLoaded', function () {
-        window.addEventListener('load', function () {
-            window.scrollTo(0, document.body.scrollHeight);
-        });
+        window.scrollTo(0, document.body.scrollHeight);
         // ---------------------------
         // INTERFACE
         // ---------------------------
@@ -290,7 +288,7 @@
                     '#messageText').value) {
                 return false
             } else {
-                // ------------SEND AND MESSAGE---------------
+                // ------------SEND MESSAGE---------------
                 let xhr = new XMLHttpRequest();
                 xhr.onreadystatechange = function (e) {
                     if (this.readyState == 4 && this.status == 200) {}
@@ -322,6 +320,9 @@
             </div>
         </li>`
                         document.querySelector('#notification_sound').play()
+                        if (window.scrollMaxY - window.scrollY <= 420) {
+                            window.scrollTo(0, document.body.scrollHeight);
+                        }
                     }
                 }
             }
@@ -443,6 +444,9 @@
             </div>
         </li>`
                         document.querySelector('#notification_sound').play()
+                        if (window.scrollMaxY - window.scrollY <= 420) {
+                            window.scrollTo(0, document.body.scrollHeight);
+                        }
                     }
                 }
             };
@@ -470,7 +474,6 @@
                     let response = JSON.parse(this.responseText);
                     let messages = response.messages
                     if (!messages || messages.length <= 0) {
-                        toast("No more messages")
                         return false
                     } else {
                         var messagesContainer = document.querySelector(".messages")
