--- a/chat/templates/chat/room.html
+++ b/chat/templates/chat/room.html
@@ -153,7 +153,7 @@
                 <div id="option-invite" class="option-menu">
                     {% for auser in other_users %}
                     <p>{{ auser.username }}
-                        <a="{% url 'chat:add_user' auser.id room.id %}" class="btn btn-success invite-btn"><i
+                        <a href="{% url 'chat:add_user' auser.id room.id %}" class="btn btn-success invite-btn"><i
                                 class="fas fa-plus"></i> Add</a>
                     </p>
                     <br>
