--- a/chat/templates/chat/home.html
+++ b/chat/templates/chat/home.html
@@ -41,7 +41,8 @@
                     <div class="friend" onclick="document.querySelector('#openRoom{{room.id}}').click()"
                         data-id="{{room.id}}">
                         <img src="{{room.imageURL}}" loading="lazy" width="50" height="50" />
-                        <a href="#" type="button" style="float: right; margin-right: 3%; border-radius: 50%; font-size: 110%;"
+                        <a href="#" type="button"
+                            style="float: right; margin-right: 3%; border-radius: 50%; font-size: 110%;"
                             class="badge badge-danger mt-4">{% if room.unread_count > 0 %}{{room.unread_count}}{% endif %}</a>
                         <p>
                             <strong>{{room.title}} {% if room.type == "group" %} &mdash; <i class="fas fa-users"></i>
@@ -81,7 +82,8 @@
                     <div class="friend" onclick="document.querySelector('#openRoom{{room.id}}').click()"
                         data-id="{{room.id}}">
                         <img src="{{room.imageURL}}" loading="lazy" width="50" height="50" />
-                        <a href="#" type="button" style="float: right; margin-right: 3%; border-radius: 50%; font-size: 110%;"
+                        <a href="#" type="button"
+                            style="float: right; margin-right: 3%; border-radius: 50%; font-size: 110%;"
                             class="badge badge-danger mt-4">{% if room.unread_count > 0 %}{{room.unread_count}}{% endif %}</a>
                         <p>
                             <strong>{{room.title}} {% if room.type == "group" %} &mdash; <i class="fas fa-users"></i>
@@ -120,7 +122,8 @@
                     class="fas fa-question-circle" onclick="toast('divides your homepage')"></i>
                 <hr>
 
-                <a type="button" href="{% url 'users:all_users' %}" class="btn" onclick="toast('We are still developing friends list'); return false"><i
+                <a type="button" href="{% url 'users:all_users' %}" class="btn"
+                    onclick="toast('We are still developing friends list'); return false"><i
                         class="fas fa-child btn btn-secondary btn-circle p-2 i-md"></i>&nbsp; My friends</a>
                 <!-- AddToAny BEGIN -->
                 <div class="a2a_kit a2a_kit_size_32 a2a_default_style"
@@ -222,7 +225,15 @@
 </div>
 
 <link rel="stylesheet" href="{% static 'chat/css/home.css' %}">
-<script>(function(t,e,s,o){var n,c,l;t.SMCX=t.SMCX||[],e.getElementById(o)||(n=e.getElementsByTagName(s),c=n[n.length-1],l=e.createElement(s),l.type="text/javascript",l.async=!0,l.id=o,l.src="https://widget.surveymonkey.com/collect/website/js/tRaiETqnLgj758hTBazgd_2FgGoq85gk68OfjsefocgLwb7SuvHTAkxH4s_2FSkhQGK4.js",c.parentNode.insertBefore(l,c))})(window,document,"script","smcx-sdk");</script>
+<script>
+    (function (t, e, s, o) {
+        var n, c, l;
+        t.SMCX = t.SMCX || [], e.getElementById(o) || (n = e.getElementsByTagName(s), c = n[n.length - 1], l = e
+            .createElement(s), l.type = "text/javascript", l.async = !0, l.id = o, l.src =
+            "https://widget.surveymonkey.com/collect/website/js/tRaiETqnLgj758hTBazgd_2FgGoq85gk68OfjsefocgLwb7SuvHTAkxH4s_2FSkhQGK4.js",
+            c.parentNode.insertBefore(l, c))
+    })(window, document, "script", "smcx-sdk");
+</script>
 <script>
     document.addEventListener('DOMContentLoaded', function () {
         var longpress = false;
@@ -308,4 +319,90 @@
         }
     });
 </script>
+<!-- ----------------------Show Latest updates to user------------------ -->
+<div class="modal fade" id="latestUpdate" tabindex="-1" role="dialog" aria-labelledby="latestUpdateLabel"
+    aria-hidden="true">
+    <div class="modal-dialog modal-dialog-scrollable modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"
+                    onclick="closeModal('#latestUpdate')">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="container">
+                    <div class="center">
+                        <h2>Orgachat Mobile Sneak Peek</h2>
+                        <div class="sneakPeakContainer">
+                            <img src="{% static 'chat/img/1.Login.jpg' %}" class="sneakPeekImage">
+                        </div>
+                        <div class="sneakPeakContainer">
+                            <img src="{% static 'chat/img/2.Validate.jpg' %}" class="sneakPeekImage">
+                        </div>
+                        <div class="sneakPeakContainer">
+                            <img src="{% static 'chat/img/3.FriendsChats.jpg' %}" class="sneakPeekImage">
+                        </div>
+                        <div class="sneakPeakContainer">
+                            <img src="{% static 'chat/img/4.AddChats.jpg' %}" class="sneakPeekImage">
+                        </div>
+                        <div class="sneakPeakContainer">
+                            <img src="{% static 'chat/img/5.Chat.jpg' %}" class="sneakPeekImage">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-outline-secondary" data-dismiss="modal"
+                    onclick="closeModal('#latestUpdate')">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+        function createCookie(name, value, days) {
+            if (days) {
+                var date = new Date();
+                date.setTime(date.getTime() + (days * 24 * 60 * 60 * 1000));
+                var expires = "; expires=" + date.toGMTString();
+            } else var expires = "";
+            document.cookie = name + "=" + value + expires + "; path=/";
+        }
+
+        function readCookie(name) {
+            var nameEQ = name + "=";
+            var ca = document.cookie.split(';');
+            for (var i = 0; i < ca.length; i++) {
+                var c = ca[i];
+                while (c.charAt(0) == ' ') c = c.substring(1, c.length);
+                if (c.indexOf(nameEQ) == 0) return c.substring(nameEQ.length, c.length);
+            }
+            return null;
+        }
+
+        function eraseCookie(name) {
+            createCookie(name, "", -1);
+        }
+        if (!readCookie('alreadyShown2')) {
+            openModal('#latestUpdate')
+            createCookie('alreadyShown2', true)
+        }
+    });
+</script>
+<style>
+    .sneakPeakContainer {
+        max-height: 500px;
+        overflow: hidden;
+        display: inline-block;
+        margin-bottom: 10px;
+        margin-right: 10px;
+        border: 2px black solid;
+    }
+
+    .sneakPeekImage {
+        width: 300px;
+        margin: 10px;
+    }
+</style>
 {% endblock content %}
