--- a/users/templates/users/index.html
+++ b/users/templates/users/index.html
@@ -5,7 +5,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Install Orgachat</title>
+    <link rel="icon" type="image/png" href="{% static 'users/favicon.png' %}"/>
+    <title>Orgachat</title>
 
     <style>
         body {
