--- a/metrics/templates/metrics/index.html
+++ b/metrics/templates/metrics/index.html
@@ -1,4 +1,4 @@
-{% extends 'chat/base.html' %}
+{% extends 'metrics/staff_base.html' %}
 
 {% block title %}Metrics Index, STUFF ONLY ALLOWED | Orgachat{% endblock title %}
 
