--- a/users/templates/users/index.html
+++ b/users/templates/users/index.html
@@ -1,19 +1,287 @@
 {% extends 'users/base.html' %}
 {% load static %}
-
 {% block title %}Install{% endblock title %}
-
 {% block content %}
+
+<section class="section-steps">
+    <div class="custom-row">
+        <h1>Orgachat</h1>
+    </div>
+    <div class="custom-row">
+        <div class="col span-1-of-2 steps-box">
+            <img src="{% static 'users/chat-screenshot.png' %}" alt="Omnifood app on iPhone" class="app-screen">
+        </div>
+        <div class="col span-1-of-2 steps-box">
+            <div class="works-step">
+                <img src="{% static 'users/check-correct.png' %}" />
+                <p>Simple</p>
+            </div>
+            <br>
+            <div class="works-step">
+                <img src="{% static 'users/pie-chart.png' %}" />
+                <p>Organized</p>
+            </div>
+            <br>
+            <div class="works-step">
+                <img src="{% static 'users/cyber-security-lock.png' %}" style="width: ;" />
+                <p>Safe</p>
+            </div>
+            <br><br>
+
+            <a href="https://play.google.com/apps/internaltest/4698701565009921250" class="btn-app"><img
+                    src="https://res.cloudinary.com/dbyejili1/image/upload/v1566340771/Omnifood/download-app-android.png"
+                    alt="Play Store Button"></a>
+        </div>
+    </div>
+</section>
+
+
 <style>
-    .container {
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+    }
+
+    html,
+    body {
+        background-color: #fff;
+        color: #555;
+        font-family: "Lato", "Arial", sans-serif;
+        font-weight: 300;
+        font-size: 20px;
+        text-rendering: optimizeLegibility;
+        overflow-x: hidden;
+    }
+
+    /*  =========================SECTIONS================================*/
+    .section {
+        clear: both;
+        padding: 0px;
+        margin: 0px;
+    }
+
+    /*  GROUPING  ======================================================================*/
+
+    .custom-row {
+        zoom: 1;
+        /* For IE 6/7 (trigger hasLayout) */
+    }
+
+    .custom-row:before,
+    .custom-row:after {
+        content: "";
+        display: table;
+    }
+
+    .custom-row:after {
+        clear: both;
+    }
+
+    /*  GRID COLUMN SETUP   ==================================================================== */
+
+    .col {
+        display: block;
+        float: left;
+        margin: 1% 0 1% 1.6%;
+    }
+
+    .col:first-child {
+        margin-left: 0;
+    }
+
+    @media only screen and (max-width: 480px) {
+        .col {
+            /*margin: 1% 0 1% 0%;*/
+            margin: 0;
+        }
+    }
+
+    .span-1-of-2 {
+        width: 49.2%;
+    }
+
+    @media only screen and (max-width: 480px) {
+        .span-1-of-2 {
+            width: 100%;
+        }
+    }
+
+    /*--------------------------------------*/
+    /* REUSABLE COMPONENTS */
+    /*--------------------------------------*/
+
+    .custom-row {
+        max-width: 1140px;
+        margin: 0 auto;
+    }
+
+    section {
+        padding: 80px 0;
+    }
+
+    /* ---------- HEADINGS ------------ */
+
+    h1 {
+        font-weight: 300;
+        text-transform: uppercase;
+        font-size: 180%;
+        word-spacing: 2px;
         text-align: center;
+        margin-bottom: 30px;
+        letter-spacing: 1px;
+    }
+
+    h1:after {
+        display: block;
+        height: 2px;
+        background-color: #19e40e;
+        content: " ";
+        width: 150px;
+        margin: 0 auto;
+        margin-top: 30px;
+    }
+
+
+    .box p {
+        font-size: 90%;
+        line-height: 145%;
+    }
+
+    /* ----------------ICONS--------------- */
+
+
+    .section-steps {
+        background-color: #f4f4f4;
+    }
+
+    .steps-box:first-child {
+        text-align: right;
+        padding-right: 3%;
+        margin-top: 30px;
+    }
+
+    .steps-box:last-child {
+        padding-left: 3%;
+        margin-top: 70px;
+    }
+
+    .btn-app:link,
+    .btn-app:visited {
+        border: 0;
+    }
+
+    .btn-app img {
+        height: 70px;
+        width: auto;
+        margin-right: 10px;
+    }
+
+    .app-screen {
+        width: 45%;
+    }
+
+    .works-step {
+        margin-bottom: 50px;
+    }
+
+    .works-step:last-of-type {
+        margin-bottom: 80px;
+    }
+
+    .works-step img {
+        display: inline-block;
+        height: 50px;
+        width: 50px;
+        float: left;
+        font-size: 150%;
+        margin-right: 25px;
+    }
+
+
+    /*--------------------------------------*/
+    /* MEDIA QUERIES*/
+    /*--------------------------------------*/
+
+    @media only screen and (max-width: 1200px) {
+        .custom-row {
+            padding: 0 2%;
+        }
+    }
+
+    @media only screen and (max-width: 1023px) {
+        body {
+            font-size: 18px;
+        }
+
+        section {
+            padding: 60px 0;
+        }
+
+        .steps-box {
+            margin-top: 10px;
+        }
+
+        .steps-box:last-child {
+            margin-top: 10px;
+        }
+
+
+        .works-step:last-of-type {
+            margin-bottom: 60px;
+        }
+
+        .app-screen {
+            width: 50%;
+        }
+    }
+
+
+    @media only screen and (max-width: 767px) {
+        body {
+            font-size: 16px;
+        }
+
+        section {
+            padding: 30px 0;
+        }
+
+        .custom-row {
+            padding: 0 4%;
+        }
+
+        .col {
+            width: 100%;
+            margin: 0 0 4% 0;
+        }
+
+        h1 {
+            font-size: 150%;
+        }
+
+        .app-screen {
+            width: 40%;
+        }
+
+        .steps-box:first-child {
+            text-align: center;
+        }
+
+        .works-step div {
+            height: 40px;
+            width: 40px;
+            margin-right: 15px;
+            padding: 4px;
+            font-size: 120%;
+        }
+
+        .works-step {
+            margin-bottom: 20px;
+        }
+
+        .works-step:last-of-type {
+            margin-bottom: 20px;
+        }
     }
 </style>
-
-
-<div class="container">
-    <img class="logo" src="{% static 'users/icon.png' %}">
-    <br>
-    <button class="primary">Install App</button>
-</div>
 {% endblock content %}
